Force scroll to fix page-shift

--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
-/* Reset some default browser styles */
+html {
+  overflow-y: scroll;
+}
+
 body,
 h1,
 h2,
